syntax = "proto3";

service UserService {
    rpc CreateUser (UserInput) returns (User);
    rpc DeleteUser (UserToken) returns (Deleted);
    rpc EditUser (UserToken) returns (User);
    rpc GetAllUsers (Empty) returns (UserList);
    rpc GetUser (UserToken) returns (User);
    rpc LoginUser (UserLoginCreds) returns (LoginToken);
    rpc LogoutUser (UserToken) returns (LoggedOut);
}

message Empty {};

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
    string password = 5;
}

message Deleted {
    string message = 1;
}

message UserInput {
    string name = 2;
    string email = 3;
    string role = 4;
    string password = 5;
}

message UserToken {
    string token = 1;
}

message EditUser {
    string token = 1;
    string name = 2;
    string email = 3;
}

message LoggedOut {
    string message = 1;
}

message UserList {
    repeated User users = 1;
}

message UserLoginCreds {
    string email = 1;
    string password = 3;
}

message LoginToken {
    string token = 1;
}